RESOLVED FIXED105116
DidHitRelevantRepaintedObjectsAreaThreshold should not use the viewRect since that varies
https://bugs.webkit.org/show_bug.cgi?id=105116
Summary DidHitRelevantRepaintedObjectsAreaThreshold should not use the viewRect since...
Beth Dakin
Reported 2012-12-15 15:50:17 PST
DidHitRelevantRepaintedObjectsAreaThreshold should not use the viewRect since that varies depending on window size. This can lead to a huge amount of variability in the heuristic which is not desired. Instead, we should use a hard-coded rect.
Attachments
Patch (3.86 KB, patch)
2012-12-15 15:59 PST, Beth Dakin
ggaren: review+
Radar WebKit Bug Importer
Comment 1 2012-12-15 15:50:42 PST
Beth Dakin
Comment 2 2012-12-15 15:57:27 PST
Adding Simon and Tim as CC's since I have discussed making this change with both of them in the past.
Beth Dakin
Comment 3 2012-12-15 15:59:26 PST
Geoffrey Garen
Comment 4 2012-12-17 16:42:26 PST
Comment on attachment 179629 [details] Patch r=me with typo fixes.
Beth Dakin
Comment 5 2012-12-17 16:46:19 PST
Note You need to log in before you can comment on or make changes to this bug.