DidHitRelevantRepaintedObjectsAreaThreshold should not use the viewRect since that varies https://bugs.webkit.org/show_bug.cgi?id=105116 -and corresponding- <rdar://problem/12889449>

Reviewed by Geoff Garen.

DidHitRelevantRepaintedObjectsAreaThreshold should not use the viewRect since that 
varies depending on window size. This can lead to a huge amount of variability in 
the heuristic which is not desired. Instead, we should use a hard-coded rect.
* page/Page.cpp:
(WebCore::relevantViewRect):
(WebCore):
(WebCore::Page::addRelevantRepaintedObject):
(WebCore::Page::addRelevantUnpaintedObject):



git-svn-id: svn://svn.chromium.org/blink/trunk@137959 bbb929c8-8fbe-4397-9dbb-9b2b20218538